--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,46 @@
 <resources>
     <string name="app_name">Dice Roller</string>
     <string name="hello_text">hey gamers</string>
+    <string name="attacker_section">Attacker</string>
+    <string name="defender_section">Defender</string>
+    <string name="dice_question">How many dice?</string>
+    <string name="dice_d6">d6</string>
+    <string name="add_d20">Challenge fate</string>
+    <string name="challenge_cost">Cost:</string>
+    <string name="bonus">Bonus:</string>
+    <string name="damage_tiers">Damage tiers:</string>
+    <string name="passive_defense">Passive Def:</string>
+    <string name="armour_range">Armour Range:</string>
+    <string name="roll">ROLL</string>
+    <string name="atk_roll_result_label">Attack base roll:</string>
+    <string name="atk_challenge_result_label">Attack challenge roll:</string>
+    <string name="atk_total_1_label">Attack roll total (before defense):</string>
+    <string name="atk_total_2_label">Attack roll total (after defense):</string>
+    <string name="def_roll_result_label">Defender base roll:</string>
+    <string name="def_challenge_result_label">Defender challenge roll:</string>
+    <string name="def_total_label">Defender roll total:</string>
+    <string name="no_def_option_label">No defensive option chosen</string>
+    <string name="dodge_result_label">Dodge modifier:</string>
+    <string name="deflect_result_label">Deflect modifier:</string>
+    <string name="intercept_result_label">Intercept modifier:</string>
+    <string name="damage_result_1_label">Attack damage (before defense):</string>
+    <string name="damage_result_2_label">Attack damage (after defense):</string>
+    <string name="def_option_label">Defensive option:</string>
+    <string name="zero">0</string>
+    <string name="no_roll">None</string>
+    <string name="failed_roll">(Failed)</string>
+    <string name="required_field">Required field</string>
+    <string name="challenge_required_field">Required field for challenge</string>
+    <string name="intercept_required_field">Required field for intercept</string>
+    <string-array name="dice_count_options">
+        <item>1</item>
+        <item>2</item>
+        <item>3</item>
+    </string-array>
+    <string-array name="def_options">
+        <item>None</item>
+        <item>Dodge</item>
+        <item>Deflect</item>
+        <item>Intercept</item>
+    </string-array>
 </resources>
