Finished dynamic form

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,51 +1,60 @@
 <resources>
     <string name="app_name">Dice Roller</string>
-    <string name="attacker_section">Attacker</string>
-    <string name="defender_section">Defender</string>
+    <string name="attacker_section_label">Attacker</string>
+    <string name="defender_section_label">Defender</string>
     <string name="dice_question">How many dice?</string>
+    <string name="dice_set_label">Dice roll value:</string>
+    <string name="dice_roll_tag">ROLL</string>
+    <string name="dice_set_tag">SET</string>
     <string name="dice_d6">d6</string>
     <string name="add_d20">Challenge fate</string>
     <string name="challenge_cost">Cost:</string>
+    <string name="challenge_set">Result:</string>
     <string name="bonus">Bonus:</string>
     <string name="damage_tiers">Damage tiers:</string>
     <string name="passive_defense">Passive Def:</string>
     <string name="armour_range">Armour Range:</string>
     <string name="roll">ROLL</string>
     <string name="atk_roll_result_label">Attack base roll:</string>
+    <string name="atk_bonus_result_label">Attack roll after bonus:</string>
     <string name="atk_challenge_result_label">Attack challenge roll:</string>
-    <string name="atk_total_1_label">Attack roll total (before defense):</string>
-    <string name="atk_total_2_label">Attack roll total (after defense):</string>
+    <string name="atk_challenge_total_label">Attack roll after challenge:</string>
+    <string name="atk_total_2_label">Attack roll after defense:</string>
     <string name="def_roll_result_label">Defender base roll:</string>
+    <string name="def_bonus_result_label">Defender roll after bonus:</string>
     <string name="def_challenge_result_label">Defender challenge roll:</string>
-    <string name="def_total_label">Defender roll total:</string>
+    <string name="def_challenge_total_label">Defender roll after challenge:</string>
     <string name="no_def_option_label">No defensive option chosen</string>
     <string name="dodge_result_label">Dodge modifier:</string>
     <string name="deflect_result_label">Deflect modifier:</string>
     <string name="intercept_result_label">Intercept modifier:</string>
-    <string name="damage_result_1_label">Attack damage (before defense):</string>
-    <string name="damage_result_2_label">Attack damage (after defense):</string>
+    <string name="atk_base_damage_label">Attack base damage:</string>
+    <string name="atk_damage_2_label">Attack damage after defense:</string>
     <string name="def_option_label">Defensive option:</string>
     <string name="zero">0</string>
     <string name="no_roll">None</string>
     <string name="failed_roll">(Failed)</string>
     <string name="required_field">Required field</string>
-    <string name="challenge_required_field">Required field for challenge</string>
-    <string name="setter_required_field">Required field for roll setter</string>
-    <string name="intercept_required_field">Required field for intercept</string>
+    <string name="debug_mode_toggle">Enable debug options</string>
     <string name="atk_roll_setter">Set atk roll</string>
     <string name="atk_challenge_setter">Set atk challenge</string>
     <string name="def_roll_setter">Set def roll</string>
     <string name="def_challenge_setter">Set def challenge</string>
-    <string name="challenge_cost_label_tag">COST_LABEL</string>
-    <string name="challenge_cost_field_tag">COST_FIELD</string>
-    <string name="dice_label_tag">DICE_LABEL</string>
-    <string name="dice_count_tag">DICE_COUNT</string>
-    <string name="dice_type_tag">DICE_TYPE</string>
+    <string name="challenge_cost_tag">COST</string>
+    <string name="challenge_set_tag">SET</string>
     <string name="bonus_label_tag">BONUS_LABEL</string>
     <string name="bonus_value_tag">BONUS_VALUE</string>
+    <string name="damage_label_tag">DAMAGE_LABEL</string>
+    <string name="damage_low_tag">DAMAGE_LOW</string>
+    <string name="damage_med_tag">DAMAGE_MED</string>
+    <string name="damage_high_tag">DAMAGE_HIGH</string>
+    <string name="passive_def_label_tag">PASSIVE_DEF</string>
+    <string name="passive_def_value_tag">DAMAGE_HIGH</string>
+    <string name="armour_label_tag">ARMOUR_LABEL</string>
+    <string name="armour_low_tag">ARMOUR_LOW</string>
+    <string name="armour_high_tag">ARMOUR_HIGH</string>
     <string name="challenge_toggle_tag">TOGGLE</string>
-    <string name="attacker_tag">ATTACKER</string>
-    <string name="defender_tag">DEFENDER</string>
+    <string name="error_toast_msg">Error: missing fields!</string>
     <string-array name="dice_count_options">
         <item>1</item>
         <item>2</item>
